--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,12 @@
 
 {% block content %}
 <div class="container-fluid px-5">
+
     <!-- Title -->
-    <h1 class="display-3 fw-bold mb-4">3D Conceptualization</h1>
+    <h1 class="d-flex fw-bold mb-4 justify-content-center">3D Conceptualization</h1>
 
     <!-- Description -->
-    <div class="intro-box mb-5">
+    <div class="intro-box mb-5 justify-content-center">
         <p>
             From 3D printing to animation to sculpting to engineering, knowing how to
             <strong>break down complex volumes into simple objects</strong> is a necessity.
@@ -18,19 +19,19 @@
     </div>
 
     <!-- Name input section -->
-    <div class="d-flex justify-content-end pe-5">
+    <div class="d-flex justify-content-center">
         <form method="POST" action="{{ url_for('start') }}" class="text-center">
             <label for="username" class="form-label name-label">
-                Enter your name below and click <strong>Continue:</strong>
+                Enter your name below and click <strong>Start:</strong>
             </label>
-            <div class="d-flex flex-column align-items-center">
+            <div class="d-flex flex-column align-items-center p-4">
                 <input type="text"
-                    class="form-control name-input mb-3"
+                    class="form-control name-input mb-3 p-4"
                     id="username"
                     name="username"
-                    placeholder="Your name"
+                    placeholder="Enter Your Name"
                     required>
-                <button type="submit" class="color_button1" id="continueBtn" disabled>Continue</button>
+                <button type="submit" class="color_button1 w-50 h-100 p-3" id="continueBtn">Start</button>
             </div>
         </form>
     </div>
